--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>2048-game</title>
+    <link rel="stylesheet" href="app.css">
 </head>
+
 <body>
-    
+    <h1>2048</h1>
+    <hr>
+    <h2>score: <span id="score">0</span></h2>
+    <div id="board"></div>
+
+    <script src="app.js"></script>
 </body>
+
 </html>
