Final commit for index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 <body>
     <h1>2048</h1>
     <hr>
-    <h2>score: <span id="score">0</span></h2>
+    <div id="Score">
+        <h2>score: <span id="score">0</span></h2>
+    </div>
+    <button id="new-game-button">
+        New Game
+    </button>
     <div id="board"></div>
 
     <script src="app.js"></script>
